--- a/WhiteLagoon.Web/appsettings.json
+++ b/WhiteLagoon.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=DESKTOP-AJBUE2J;Initial Catalog=WhiteLagoon;Integrated Security = True;TrustServerCertificate=Yes;"
+    "DefaultConnection": "Data Source=DESKTOP-GLV5MFP\\SQLEXPRESS;Initial Catalog=WhiteLagoon;Integrated Security = True;TrustServerCertificate=Yes;"
   },
   "Logging": {
     "LogLevel": {
