Repository and UnitOfWork

--- a/WhiteLagoon.Web/appsettings.json
+++ b/WhiteLagoon.Web/appsettings.json
@@ -1,7 +1,7 @@
 {
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=DESKTOP-GLV5MFP\\SQLEXPRESS;Initial Catalog=WhiteLagoon;Integrated Security = True;TrustServerCertificate=Yes;"
-  },
+  }, //DESKTOP-AJBUE2J
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -9,5 +9,5 @@
     }
   },
   "AllowedHosts": "*"
- 
+
 }
