--- a/WhiteLagoon.Web/WhiteLagoon.Web.csproj
+++ b/WhiteLagoon.Web/WhiteLagoon.Web.csproj
@@ -20,4 +20,8 @@
     <ProjectReference Include="..\WhiteLagoon.Infrastructure\WhiteLagoon.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\Images\VillaImages\" />
+  </ItemGroup>
+
 </Project>
