--- a/WhiteLagoon.Web/WhiteLagoon.Web.csproj
+++ b/WhiteLagoon.Web/WhiteLagoon.Web.csproj
@@ -22,6 +22,7 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\Images\VillaImages\" />
+    <Folder Include="wwwroot\jquery-ajax-unobtrusive\dist\" />
   </ItemGroup>
 
 </Project>
