Booking and Stripe Payment Method

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@
 /WhiteLagoon.Infrastructure/bin/Debug/net8.0
 /WhiteLagoon.Domain/bin/Debug/net8.0
 /WhiteLagoon.Application/bin/Debug/net8.0
+/whitelagoon gmail.txt
